Restructured project to not hold configs